# open-service-bot

catkin_ws/src/bill_navigation/: CMakeLists.txt  Pre_Requisites  README.txt  bill_remote.launch  description.launch.xml  package.xml  startBill.launch  start_bill_mapping.launch  start_bill_navigation.launch
catkin_ws/src/bill_navigation/bagfiles/logsFiles/: Log_Exec_Calc_Bill.txt  odom_calc_encodor_log_19-09-16-17-00.txt
catkin_ws/src/bill_navigation/bill_config/: global_costmap_params.yaml  move_base_params.yaml
catkin_ws/src/bill_navigation/config/bill_config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
catkin_ws/src/bill_navigation/config/bill_config_old/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
catkin_ws/src/bill_navigation/config2/bill_config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
catkin_ws/src/bill_navigation/launch/: amcl.launch  bill_init.launch  joystick_teleop.launch  keyboard_teleop.launch  nav_init.launch  path_planning.launch  start_bill_control.launch  start_bill_mapping.launch  start_bill_navigation.launch  start_bill_teleop.launch
catkin_ws/src/bill_navigation/maps/: 2021_1_map.pgm  2021_1_map.yaml  2021_2_map.pgm  2021_map.yaml  arena1.pgm  arena1.yaml  arena2.pgm  arena2.yaml  arena3.pgm  arena3.yaml  ll.yaml  my_map.pgm  my_map2.pgm  my_map2.yaml  myfirstmap.yaml  newmap2.yaml
catkin_ws/src/bill_navigation/odometry/: CMakeLists.txt  package.xml
catkin_ws/src/bill_navigation/rviz/: amcl.rviz  bill_navigation.rviz  gmapping.rviz  nav.rviz
catkin_ws/src/bill_navigation/script/: rotateForVision.py  turn180.py
catkin_ws/src/bill_navigation/src/: Robot.cpp  odometry.cpp  pid.cpp
catkin_ws/src/bill_urdf/: 2021_2_map.yaml  base-bill.gazebo  (+4 more)
(+36 files in other folders)
